fix widget number not showing regression use webpack-dev-server stable version

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -47,7 +47,9 @@ h1 {
       overflow: hidden;
       transition: none;
       z-index: 1;
-      height: auto !important; // override grid item height to fit content
+      .section-table {
+        height: auto !important; // override grid item height to fit content
+      }
     }
   }
 }
